update for jvm gc logging