@@ -24,16 +24,44 @@ else
    echo "Classpath: $jar"
 fi
 
+if [[ -z $CAPLIN_GC_LOG ]]; then
+  echo "jvm not defined, the gc log will not be shown."
+else
+  if [[ -z $gc_log_file_size ]]; then
+    export gc_log_file_size=5
+    echo 'the gc log fize size is '${gc_log_file_size}'M.'
+  fi
+
+  if [[ -z $number_Of_GCLogFiles ]]; then
+    export number_Of_GCLogFiles=10
+    echo 'the number of gc log files is '${number_Of_GCLogFiles}'.'
+  fi
+fi
+
 if [ $confreading = 1 ]; then
    java -jar "$jar" "$@"
    exit $?
 else
-   if [[ ! -z $START_FOREGROUND_NOLOGS ]]; then
-       java -cp "$classpath" -jar "$jar" "$@" > "$LOGDIR"/java$BLADENAME.log 2>&1
-   elif [[ ! -z $START_FOREGROUND ]]; then
-       java -cp "$classpath" -jar "$jar" "$@" --foreground-logs=true
-   else
-       java -cp "$classpath" -jar "$jar" "$@" 2> "$LOGDIR"/java-$BLADENAME.log >/dev/null &
-   fi
+    if [[ ! -z $START_FOREGROUND_NOLOGS ]]; then
+        if [ $CAPLIN_GC_LOG = "true" ]; then
+            java -cp "$classpath" -jar -Xloggc:var/gc-%p.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=${gc_log_file_size} -XX:GCLogFileSize=${number_Of_GCLogFiles}M -XX:+PrintConcurrentLocks -XX:+PrintCommandLineFlags -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=var "$jar" "$@" > "$LOGDIR"/java$BLADENAME.log 2>&1
+        else
+            java -cp "$classpath" -jar "$jar" "$@" > "$LOGDIR"/java$BLADENAME.log 2>&1
+        fi
+
+    elif [[ ! -z $START_FOREGROUND ]]; then
+        if [ $CAPLIN_GC_LOG = "true" ]; then
+            java -cp "$classpath" -jar -jar -Xloggc:var/gc-%p.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=${gc_log_file_size} -XX:GCLogFileSize=${number_Of_GCLogFiles}M -XX:+PrintConcurrentLocks -XX:+PrintCommandLineFlags -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=var "$jar" "$@" --foreground-logs=true
+        else
+            java -cp "$classpath" -jar "$jar" "$@" --foreground-logs=true
+        fi
+
+    else
+        if [ $CAPLIN_GC_LOG = "true" ]; then
+            java -cp "$classpath" -jar -Xloggc:var/gc-%p.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=${gc_log_file_size} -XX:GCLogFileSize=${number_Of_GCLogFiles}M -XX:+PrintConcurrentLocks -XX:+PrintCommandLineFlags -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=var "$jar" "$@" 2> "$LOGDIR"/java-$BLADENAME.log >/dev/null &
+        else
+            java -cp "$classpath" -jar "$jar" "$@" 2> "$LOGDIR"/java-$BLADENAME.log >/dev/null &
+        fi
+    fi
    echo $!
 fi
